# mongosemantic

./: .capture.yaml  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  HANDOFF.md  atlas-setup.md  test-evidence-0.9.md
mongosemantic/: __init__.py  __main__.py  cli.py  config.py  connection_store.py  exceptions.py
mongosemantic/chunking/: __init__.py  splitter.py
mongosemantic/commands/: apply.py  index.py  inspect.py  integrate.py  migrate.py  reindex.py  reindex_hnsw.py  retry.py  search.py  serve.py  status.py  teardown.py  ui.py  worker_cmd.py
mongosemantic/db/: __init__.py  client.py  indexes.py  queries.py  schema.py
mongosemantic/embeddings/: __init__.py  local.py  ollama.py  openai.py  provider.py
mongosemantic/mcp_server/: __init__.py  server.py  tools.py
mongosemantic/migration/: __init__.py  migrate.py
mongosemantic/search/: __init__.py  atlas.py  brute_force.py  cross_collection.py  filtering.py  hnsw_index.py  hybrid.py  inline.py  local_hybrid.py  rerank.py
mongosemantic/state/: __init__.py  config_store.py  heartbeat.py  job_queue.py  resume_tokens.py
mongosemantic/sync/: __init__.py  change_stream.py  enqueue.py  polling.py
mongosemantic/web/: __init__.py  app.py  connection_errors.py  content.py  identifiers.py  migration_progress.py  progress.py  safe_pipeline.py  security.py
mongosemantic/worker/: __init__.py  embedded.py  runner.py
scripts/: seed_demo.py  seed_mflix.py  seed_wines.py
tests/: conftest.py
tests/integration/: conftest.py  test_change_stream_integration.py  test_index_e2e.py  (+7 more)
(+83 files in other folders)
