[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mongosemantic"
version = "0.2.0"
description = "Zero-config semantic search for any MongoDB database."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Varma Budharaju" }]
keywords = ["mongodb", "semantic-search", "vector-search", "embeddings", "atlas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
]
dependencies = [
  "pymongo>=4.7",
  "typer>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "pydantic>=2.6",
  "sentence-transformers>=2.6",
  "numpy>=1.26",
  "httpx>=0.27",
  "tenacity>=8.2",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mongomock>=4.1",
]

[project.scripts]
mongosemantic = "mongosemantic.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["mongosemantic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
